--- a/app/src/main/res/layout/fragment_app_setting.xml
+++ b/app/src/main/res/layout/fragment_app_setting.xml
@@ -46,6 +46,7 @@
 
     <EditText
         android:id="@+id/searchRadius"
+        style="@android:style/Widget.DeviceDefault.EditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
