--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -85,9 +85,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorApp"
-        android:text="Missing/Found Date"
+        android:text="Choose a date"
         android:textAlignment="textStart"
+        android:background="@color/colorApp"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold"
