--- a/app/src/main/res/layout/fragment_show_on_map.xml
+++ b/app/src/main/res/layout/fragment_show_on_map.xml
@@ -10,10 +10,6 @@
         android:id="@+id/showOnMap"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,13 +22,14 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:clickable="true"
+        app:backgroundTint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/showOnMap"
         app:srcCompat="@drawable/ic_refresh_black_24dp" />
 
     <ProgressBar
         android:id="@+id/progressBarOnMap"
-        style="?android:attr/progressBarStyle"
+        style="@android:style/Widget.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
