--- a/app/src/main/res/layout/activity_each_pet.xml
+++ b/app/src/main/res/layout/activity_each_pet.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:id="@+id/detailNameText"
                 android:layout_width="90dp"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="TextView"
@@ -41,7 +41,7 @@
             <TextView
                 android:id="@+id/detailDesexedText"
                 android:layout_width="90dp"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="TextView"
@@ -52,9 +52,9 @@
 
             <TextView
                 android:id="@+id/textView8"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
+                android:layout_width="60dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="12dp"
                 android:text="Desexed:"
                 android:textColor="@android:color/black"
@@ -65,8 +65,8 @@
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="Name:"
@@ -78,8 +78,8 @@
 
             <TextView
                 android:id="@+id/textView13"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="Breed:"
@@ -92,7 +92,7 @@
             <TextView
                 android:id="@+id/detailBreedText"
                 android:layout_width="90dp"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="TextView"
@@ -103,9 +103,9 @@
 
             <TextView
                 android:id="@+id/textView15"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
+                android:layout_width="60dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="12dp"
                 android:text="Size:"
                 android:textColor="@android:color/black"
@@ -117,7 +117,7 @@
             <TextView
                 android:id="@+id/detailSizeText"
                 android:layout_width="90dp"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="TextView"
@@ -128,8 +128,8 @@
 
             <TextView
                 android:id="@+id/textView17"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="Color:"
@@ -142,7 +142,7 @@
             <TextView
                 android:id="@+id/detailColorText"
                 android:layout_width="90dp"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="TextView"
@@ -154,7 +154,7 @@
             <TextView
                 android:id="@+id/textView19"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:text="MissingDate:"
@@ -167,7 +167,7 @@
             <TextView
                 android:id="@+id/detailMissingDateText"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:text="TextView"
@@ -178,8 +178,8 @@
 
             <TextView
                 android:id="@+id/textView21"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="Status:"
@@ -191,8 +191,8 @@
 
             <TextView
                 android:id="@+id/detailKindLbl"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="Kind:"
@@ -205,7 +205,7 @@
             <TextView
                 android:id="@+id/detailKindText"
                 android:layout_width="90dp"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="TextView"
@@ -217,7 +217,7 @@
             <TextView
                 android:id="@+id/detailStatusText"
                 android:layout_width="90dp"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="TextView"
@@ -228,9 +228,9 @@
 
             <TextView
                 android:id="@+id/textView23"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
+                android:layout_width="60dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="12dp"
                 android:text="Age:"
                 android:textColor="@android:color/black"
@@ -242,7 +242,7 @@
             <TextView
                 android:id="@+id/detailAgeText"
                 android:layout_width="90dp"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="TextView"
@@ -253,9 +253,9 @@
 
             <TextView
                 android:id="@+id/textView27"
-                android:layout_width="70dp"
-                android:layout_height="21dp"
-                android:layout_marginStart="6dp"
+                android:layout_width="60dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="12dp"
                 android:text="Gender:"
                 android:textColor="@android:color/black"
@@ -267,7 +267,7 @@
             <TextView
                 android:id="@+id/detailGenderText"
                 android:layout_width="90dp"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="TextView"
@@ -278,9 +278,9 @@
 
             <TextView
                 android:id="@+id/textView29"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
+                android:layout_width="60dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="12dp"
                 android:text="Location:"
                 android:textColor="@android:color/black"
@@ -292,7 +292,7 @@
             <TextView
                 android:id="@+id/detailLocationText"
                 android:layout_width="90dp"
-                android:layout_height="22dp"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="12dp"
                 android:text="TextView"
@@ -312,7 +312,7 @@
                 android:background="@color/colorApp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:text="Add comments"
+                android:text="Comments"
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -324,7 +324,7 @@
             <TextView
                 android:id="@+id/descriptionLbl"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="10dp"
                 android:text="Description:"
