--- a/app/src/main/res/layout/each_comment.xml
+++ b/app/src/main/res/layout/each_comment.xml
@@ -36,10 +36,10 @@
         android:id="@+id/commentDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:text="Date"
-        app:layout_constraintStart_toEndOf="@+id/commentEmail"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
