--- a/app/src/main/res/layout/fragment_pets_list.xml
+++ b/app/src/main/res/layout/fragment_pets_list.xml
@@ -20,6 +20,7 @@
 
     <ProgressBar
         android:id="@+id/progressBarOnList"
+        style="@android:style/Widget.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
