--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -16,11 +16,11 @@
 
     <TextView
         android:id="@+id/KindLbl"
-        android:layout_width="60dp"
+        android:layout_width="61dp"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/basic"
         android:text="Kind:"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
@@ -34,7 +34,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/basic"
         android:text="TextView"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
@@ -43,11 +43,11 @@
 
     <TextView
         android:id="@+id/NameLbl"
-        android:layout_width="60dp"
+        android:layout_width="61dp"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/basic"
         android:text="Name:"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
@@ -61,7 +61,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="6dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/basic"
         android:text="TextView"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
@@ -70,11 +70,11 @@
 
     <TextView
         android:id="@+id/BreedLbl"
-        android:layout_width="60dp"
+        android:layout_width="61dp"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/basic"
         android:text="Breed:"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
@@ -88,7 +88,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="6dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/basic"
         android:text="TextView"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
@@ -97,11 +97,11 @@
 
     <TextView
         android:id="@+id/ColorLbl"
-        android:layout_width="60dp"
+        android:layout_width="61dp"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/basic"
         android:text="Color:"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
@@ -115,7 +115,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="6dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/basic"
         android:text="TextView"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
@@ -124,11 +124,11 @@
 
     <TextView
         android:id="@+id/StatusLbl"
-        android:layout_width="60dp"
+        android:layout_width="61dp"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/basic"
         android:text="Status:"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
@@ -142,7 +142,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="6dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/basic"
         android:text="TextView"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
@@ -155,7 +155,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/basic"
         android:text="Location:"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
@@ -170,7 +170,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="6dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/basic"
         android:text="TextView"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
@@ -193,6 +193,19 @@
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imagePet"
+        app:layout_constraintTop_toBottomOf="@+id/RegionTxt" />
+
+    <Button
+        android:id="@+id/deleteBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="26dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="6dp"
+        android:background="@android:color/holo_red_dark"
+        android:fontFamily="@font/basic"
+        android:text="Delete"
+        android:textColor="@android:color/white"
+        app:layout_constraintStart_toEndOf="@+id/Details"
         app:layout_constraintTop_toBottomOf="@+id/RegionTxt" />
 
 
