--- a/app/src/main/res/layout/fragment_add_new_pet.xml
+++ b/app/src/main/res/layout/fragment_add_new_pet.xml
@@ -232,16 +232,14 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="66dp"
-        android:layout_marginTop="66dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginTop="60dp"
         android:layout_weight="1"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/addingPetsView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/hideMapBtn"
