--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -197,7 +197,7 @@
 
     <Button
         android:id="@+id/deleteBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="66dp"
         android:layout_height="26dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
